[package]
name = "IFT"
version = "0.1.0"
edition = "2021"

[dependencies]
restest = "0.1.0"
serde = { version = "1.0.202", features = ["derive"] }
http = "0.2.12"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
ethabi = "=18.0.0"
reqwest = "0.11.27"
serde_json = "1.0.117"
docker-command = "=5.0.1"
execute = "0.2.13"
time = "0.3.36"
